@@ -390,6 +390,91 @@ Using the ScriptBlock parameter, one can achieve equivalent functionality by cal
 <command:command xmlns:maml="http://schemas.microsoft.com/maml/2004/10" xmlns:command="http://schemas.microsoft.com/maml/dev/command/2004/10" xmlns:dev="http://schemas.microsoft.com/maml/dev/2004/10">
 <!--Generated by PS Help Cmdlet Editor-->
   <command:details>
+    <command:name>Remove-PSReadlineKeyHandler</command:name>
+    <maml:description>
+      <maml:para>Remove a key binding.</maml:para>
+    </maml:description>
+    <maml:copyright>
+      <maml:para />
+    </maml:copyright>
+    <command:verb>Remove</command:verb>
+    <command:noun>PSReadlineKeyHandler</command:noun>
+    <dev:version />
+  </command:details>
+  <maml:description>
+  <!--This is the Description section-->
+    <maml:para>Removes a key binding.</maml:para>
+  </maml:description>
+  <command:syntax>
+    <command:syntaxItem>
+      <maml:name>Remove-PSReadlineKeyHandler</maml:name>
+      <command:parameter required="true" variableLength="true" globbing="false" pipelineInput="false" position="0">
+        <maml:name>Chord</maml:name>
+        <maml:description>
+          <maml:para>The key or sequence of keys to be removed.  A single binding is specified with a single string.  If the binding is a sequence of keys, the keys are separated with a comma, e.g. &quot;Ctrl+X,Ctrl+X&quot;.  Note that this parameter accepts multiple strings.  Each string is a separate binding, not a sequence of keys for a single binding.</maml:para>
+        </maml:description>
+        <command:parameterValue required="true" variableLength="true">String[]</command:parameterValue>
+      </command:parameter>
+    </command:syntaxItem>
+  </command:syntax>
+  <command:parameters>
+    <command:parameter required="true" variableLength="true" globbing="false" pipelineInput="false" position="0">
+      <maml:name>Chord</maml:name>
+      <maml:description>
+        <maml:para>The key or sequence of keys to be bound to a Function or ScriptBlock.  A single binding is specified with a single string.  If the binding is a sequence of keys, the keys are separated with a comma, e.g. &quot;Ctrl+X,Ctrl+X&quot;.  Note that this parameter accepts multiple strings.  Each string is a separate binding, not a sequence of keys for a single binding.</maml:para>
+      </maml:description>
+      <command:parameterValue required="true" variableLength="true">String[]</command:parameterValue>
+      <dev:type>
+        <maml:name>String[]</maml:name>
+        <maml:uri/>
+      </dev:type>
+      <dev:defaultValue></dev:defaultValue>
+    </command:parameter>
+  </command:parameters>
+  <command:inputTypes>
+    <command:inputType>
+      <dev:type>
+        <maml:name></maml:name>
+        <maml:uri/>
+        <maml:description>
+          <maml:para>You cannot pipe objects to Remove-PSReadlineKeyHandler</maml:para>
+        </maml:description>
+      </dev:type>
+      <maml:description></maml:description>
+    </command:inputType>
+  </command:inputTypes>
+  <command:returnValues>
+    <command:returnValue>
+      <dev:type>
+        <maml:name></maml:name>
+        <maml:uri/>
+        <maml:description>
+          <maml:para></maml:para>
+        </maml:description>
+      </dev:type>
+      <maml:description></maml:description>
+  </command:returnValue>
+    </command:returnValues>
+  <command:terminatingErrors></command:terminatingErrors>
+  <command:nonTerminatingErrors></command:nonTerminatingErrors>
+  <maml:alertSet>
+    <maml:title></maml:title>
+    <maml:alert>
+      <maml:para></maml:para>
+    </maml:alert>
+  </maml:alertSet>
+  <command:examples>
+  </command:examples>
+  <maml:relatedLinks>
+    <maml:navigationLink>
+      <maml:linkText>about_PSReadline</maml:linkText>
+      <maml:uri />
+    </maml:navigationLink>
+  </maml:relatedLinks>
+</command:command>
+<command:command xmlns:maml="http://schemas.microsoft.com/maml/2004/10" xmlns:command="http://schemas.microsoft.com/maml/dev/command/2004/10" xmlns:dev="http://schemas.microsoft.com/maml/dev/2004/10">
+<!--Generated by PS Help Cmdlet Editor-->
+  <command:details>
     <command:name>Set-PSReadlineOption</command:name>
     <maml:description>
       <maml:para>Customizes the behavior of command line editing in PSReadline.</maml:para>
